# opentelemetry-distro-python

./: .coverage  .gitignore  .pre-commit-config.yaml  A365_DOCUMENTATION.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MIGRATION_A365.md  NOTICE.md  PLANNING.md  PRIVACY.md  README.md  SECURITY.md  SUPPORT.md  dev_requirements.txt  mypy.ini  pyproject.toml  tox.ini
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  question.yml
.github/workflows/: black-auto-format.yml  docs.yml  issue-auto-label.yml  issue-notify.yml  needs-author-feedback-followup.yml  needs-author-feedback.yml  performance-comment.yml  performance.yml  pr-autoformat.yml  pr-validation.yml
azure-monitor-opentelemetry/: README.md  setup.py
azure-monitor-opentelemetry/azure_monitor_opentelemetry.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
docs/: A365_DOCUMENTATION.md  MIGRATION_A365.md  Makefile  conf.py  fabric-getting-started.md  index.rst  make.bat
eng/tox/: run_mypy.py  run_pylint.py  tox.ini  toxfile.py
microsoft/opentelemetry/: _configure.py  _constants.py  _types.py
microsoft/opentelemetry/_utils/: configurations.py  instrumentation.py
microsoft/tests/: test_configure.py  test_integration.py
perf/: README.md  compare.py
samples/: .pylintrc  validate_traces.py
samples/a365/: exporter.py  manual_telemetry.py
samples/a365/s2s/: README.md  pyproject.toml  s2s_exporter.py
samples/a365_s2s/: .env.example  README.md  s2s_exporter.py
samples/distro/: a365_exporter.py  custom_events.py  fastapi_app.py  logging_sample.py  metrics.py  tracing.py
samples/fabric/: README.md  app.py  collector-config.yaml
samples/langchain/: README.md  requirements.txt  sample_a365_langchain.py  sample_arise_langchain.py  sample_langchain_azure.py  sample_langchain_instrumentation.py  sample_opentelemetry.py  validate_traces.py
samples/microsoft_agent_framework/: .env.example  README.md  requirements.txt  sample_maf_agent.py
samples/openai/: README.md  requirements.txt  sample_openai_agents.py  sample_openai_chat.py
samples/openai-agents-v2/: sample_agents_v2,py  sample_agents_v2.py
samples/otlp/: README.md  tracing.py
skills/a365-standalone-exporter-python/: SKILL.md
skills/otel-distro-integration/: SKILL.md
src/_langchain/opentelemetry-instrumentation-langchain/: dev_requirements.txt  pyproject.toml
src/_langchain/opentelemetry-instrumentation-langchain/src/opentelemetry/instrumentation/langchain/: __init__.py  callback_handler.py  invocation_manager.py  package.py  span_manager.py
src/_langchain/opentelemetry-instrumentation-langchain/tests/: conftest.py  test_invocation_manager.py  test_llm_call.py
src/_langchain/opentelemetry-instrumentation-langchain/tests/cassettes/: test_chat_openai_gpt_3_5_turbo_model_llm_call.yaml  test_chat_openai_gpt_3_5_turbo_model_llm_call_with_error.yaml
src/genai/_langchain/: __init__.py  _tracer.py  _tracer_instrumentor.py  _utils.py  tracer.py  tracer_instrumentor.py  utils.py
src/microsoft/azureMonitor/: __init__.py  _configure.py
src/microsoft/opentelemetry/: __init__.py  _a365_utils.py  _configure.py  _constants.py  _distro.py  _instrumentation.py  _types.py  _utils.py  _version.py
src/microsoft_opentelemetry_distro/: __init__.py
src/microsoft_opentelemetry_distro_python.egg-info/: SOURCES.txt  top_level.txt
standalone-exporters/: README.md  pyproject.toml
standalone-exporters/src/a365_otel_exporter/: __init__.py  auth.py  baggage.py  exporter.py
tests/: .pylintrc  conftest.py  test_agent_framework_integration.py  test_configure.py  test_console.py  test_distro.py  test_django_integration.py  test_fastapi_integration.py  test_flask_integration.py  test_httpx_instrumentation.py  test_instrumentation.py  test_instrumentation_options.py  test_integration.py  test_langchain_integration.py  test_openai_agents_integration.py  test_openai_integration.py  test_otlp.py  test_psycopg2_integration.py  test_requests_integration.py  test_sdkstats.py  test_semantic_kernel_integration.py  test_smoke.py  test_urllib3_integration.py  test_urllib_integration.py
tests/a365/: test_apply_guardrail_scope.py  test_circuit_breaker.py  test_contextual_token_resolver.py  test_enriching_span_processor.py  test_exporter.py  test_handler.py  test_nonrecording_span.py  test_payload_chunking.py  test_span_processor.py  test_utils.py
tests/a365/integration/: conftest.py
tests/a365/runtime/: test_environment_utils.py  test_export_config_consistency.py  test_operation_error.py  test_operation_result.py  test_power_platform_api_discovery.py  test_utility.py  test_version_utils.py
tests/agent_framework/: test_span_enricher.py  test_trace_instrumentor.py  test_utils.py
tests/agent_framework/integration/: conftest.py  test_agentframework_trace_processor.py
tests/azureMonitor/: test_configure.py
tests/azureMonitor/autoinstrumentation/: test_configurator.py  test_distro.py
tests/azureMonitor/browserSdkLoader/: test_config.py  test_django_middleware.py  test_integration.py  test_snippet_injector.py
tests/azureMonitor/diagnostics/: test_diagnostic_logging.py  test_status_logger.py
tests/azureMonitor/utils/: test_configurations.py  test_utils.py
tests/azure_monitor/: conftest.py  test_configure.py
tests/azure_monitor/autoinstrumentation/: test_configurator.py  test_distro.py
tests/azure_monitor/browserSdkLoader/: test_config.py  test_django_middleware.py  test_init.py  test_integration.py  test_snippet_injector.py
tests/azure_monitor/diagnostics/: test_diagnostic_logging.py  test_status_logger.py
tests/azure_monitor/utils/: test_configurations.py  test_instrumentation.py  test_utils.py
tests/genai/main_agent/: test_log_record_processor.py  (+2 more)
tests/langchain/: test_main_agent_propagation.py  test_span_enricher.py  test_tracer.py  test_tracer_instrumentor.py  test_utils.py
tests/openai_agents/: test_message_mapper.py  test_trace_instrumentor.py  test_trace_processor.py  test_utils.py
tests/perf/: test_overhead.py
tests/semantic_kernel/: test_span_enricher.py  test_trace_instrumentor.py
(+233 files in other folders)
