[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "microsoft-opentelemetry"
version = "0.1.0"
description = "Minimal template for the Microsoft OpenTelemetry distro for Python"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "azure-core<2.0.0,>=1.28.0",
    "azure-monitor-opentelemetry-exporter~=1.0.0b31",
    "opentelemetry-api~=1.26",
    "opentelemetry-sdk~=1.26",
    "opentelemetry-instrumentation~=0.47b0",
    "opentelemetry-instrumentation-logging~=0.47b0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
]
dev = [
    "black>=24.0",
    "pylint>=3.3",
    "mypy>=1.10",
    "pyright>=1.1",
    "pytest>=8.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
namespaces = true

[tool.black]
line-length = 120
target-version = ["py310"]

[tool.pylint.main]
py-version = "3.10"

[tool.pylint.format]
max-line-length = 120

[tool.pylint.messages_control]
disable = [
    "missing-function-docstring",
    "missing-module-docstring",
    "missing-class-docstring",
    "import-outside-toplevel",
    "import-error",
    "no-name-in-module",
    "duplicate-code",
    "too-few-public-methods",
    "too-many-arguments",
    "too-many-positional-arguments",
    "too-many-locals",
    "wrong-import-order",
    "ungrouped-imports",
    "unknown-option-value",
    "fixme",
    "invalid-name",
    "unused-argument",
    "protected-access",
    "too-many-lines",
    "too-many-public-methods",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
